pp2/y.output
Terminals unused in grammar

   T_Increm
   T_Decrem
   T_Switch
   T_Case
   T_Default


Grammar

    0 $accept: Program $end

    1 Program: DeclList

    2 DeclList: DeclList Decl
    3         | Decl

    4 Decl: VarDecl
    5     | FnDecl
    6     | ClassDecl
    7     | InterfaceDecl

    8 VarDecl: Var ';'

    9 Var: Type T_Identifier

   10 VarList: VarList ',' Var
   11        | Var

   12 Type: T_Int
   13     | T_Double
   14     | T_Bool
   15     | T_String
   16     | T_Identifier
   17     | Type T_Dims

   18 FnDecl: Type T_Identifier '(' Formals ')' StmtBlock
   19       | T_Void T_Identifier '(' Formals ')' StmtBlock

   20 Prototype: Type T_Identifier '(' Formals ')' ';'
   21          | T_Void T_Identifier '(' Formals ')' ';'

   22 PrototypeList: PrototypeList Prototype
   23              | /* empty */

   24 Formals: VarList
   25        | /* empty */

   26 Field: VarDecl
   27      | FnDecl

   28 FieldList: FieldList Field
   29          | /* empty */

   30 IdentList: IdentList ',' T_Identifier
   31          | T_Identifier

   32 ClassDecl: T_Class T_Identifier '{' FieldList '}'
   33          | T_Class T_Identifier T_Extends T_Identifier '{' FieldList '}'
   34          | T_Class T_Identifier T_Implements IdentList '{' FieldList '}'
   35          | T_Class T_Identifier T_Extends T_Identifier T_Implements IdentList '{' FieldList '}'

   36 InterfaceDecl: T_Interface T_Identifier '{' PrototypeList '}'

   37 VarDeclList: VarDeclList VarDecl
   38            | VarDecl

   39 StmtList: StmtList Stmt
   40         | Stmt

   41 StmtBlock: '{' VarDeclList StmtList '}'
   42          | '{' VarDeclList '}'
   43          | '{' StmtList '}'
   44          | '{' '}'

   45 ExprCont: Expr
   46         | /* empty */

   47 Stmt: ExprCont ';'
   48     | IfStmt
   49     | WhileStmt
   50     | ForStmt
   51     | BreakStmt
   52     | ReturnStmt
   53     | PrintStmt
   54     | StmtBlock

   55 Else: T_Else Stmt
   56     | /* empty */

   57 IfStmt: T_If '(' Expr ')' Stmt Else

   58 WhileStmt: T_While '(' Expr ')' Stmt

   59 ForStmt: T_For '(' ExprCont ';' Expr ';' ExprCont ')' Stmt

   60 ReturnStmt: T_Return ExprCont ';'

   61 BreakStmt: T_Break ';'

   62 ExprList: ExprList ',' Expr
   63         | Expr

   64 PrintStmt: T_Print '(' ExprList ')' ';'

   65 Expr: Lvalue
   66     | Constant
   67     | T_This
   68     | Call
   69     | '(' Expr ')'
   70     | Lvalue '=' Expr
   71     | Expr '+' Expr
   72     | Expr '-' Expr
   73     | Expr '*' Expr
   74     | Expr '/' Expr
   75     | Expr '%' Expr
   76     | '-' Expr
   77     | Expr '<' Expr
   78     | Expr T_LessEqual Expr
   79     | Expr '>' Expr
   80     | Expr T_GreaterEqual Expr
   81     | Expr T_Equal Expr
   82     | Expr T_NotEqual Expr
   83     | Expr T_And Expr
   84     | Expr T_Or Expr
   85     | '!' Expr
   86     | T_ReadInteger '(' ')'
   87     | T_ReadLine '(' ')'
   88     | T_New '(' T_Identifier ')'
   89     | T_NewArray '(' Expr ',' Type ')'

   90 Lvalue: T_Identifier
   91       | Expr '.' T_Identifier
   92       | Expr '[' Expr ']'

   93 Call: T_Identifier '(' Actuals ')'
   94     | Expr '.' T_Identifier '(' Actuals ')'

   95 Actuals: ExprList
   96        | /* empty */

   97 Constant: T_IntConstant
   98         | T_DoubleConstant
   99         | T_BoolConstant
  100         | T_StringConstant
  101         | T_Null


Terminals, with rules where they appear

$end (0) 0
'!' (33) 85
'%' (37) 75
'(' (40) 18 19 20 21 57 58 59 64 69 86 87 88 89 93 94
')' (41) 18 19 20 21 57 58 59 64 69 86 87 88 89 93 94
'*' (42) 73
'+' (43) 71
',' (44) 10 30 62 89
'-' (45) 72 76
'.' (46) 91 94
'/' (47) 74
';' (59) 8 20 21 47 59 60 61 64
'<' (60) 77
'=' (61) 70
'>' (62) 79
'[' (91) 92
']' (93) 92
'{' (123) 32 33 34 35 36 41 42 43 44
'}' (125) 32 33 34 35 36 41 42 43 44
error (256)
T_Void (258) 19 21
T_Bool (259) 14
T_Int (260) 12
T_Double (261) 13
T_String (262) 15
T_Class (263) 32 33 34 35
T_LessEqual (264) 78
T_GreaterEqual (265) 80
T_Equal (266) 81
T_NotEqual (267) 82
T_Dims (268) 17
T_And (269) 83
T_Or (270) 84
T_Null (271) 101
T_Extends (272) 33 35
T_This (273) 67
T_Interface (274) 36
T_Implements (275) 34 35
T_While (276) 58
T_For (277) 59
T_If (278) 57
T_Else (279) 55
T_Return (280) 60
T_Break (281) 61
T_New (282) 88
T_NewArray (283) 89
T_Print (284) 64
T_ReadInteger (285) 86
T_ReadLine (286) 87
T_Identifier (287) 9 16 18 19 20 21 30 31 32 33 34 35 36 88 90 91 93
    94
T_StringConstant (288) 100
T_IntConstant (289) 97
T_DoubleConstant (290) 98
T_BoolConstant (291) 99
T_Increm (292)
T_Decrem (293)
T_Switch (294)
T_Case (295)
T_Default (296)
NoElse (297)


Nonterminals, with rules where they appear

$accept (61)
    on left: 0
Program (62)
    on left: 1, on right: 0
DeclList (63)
    on left: 2 3, on right: 1 2
Decl (64)
    on left: 4 5 6 7, on right: 2 3
VarDecl (65)
    on left: 8, on right: 4 26 37 38
Var (66)
    on left: 9, on right: 8 10 11
VarList (67)
    on left: 10 11, on right: 10 24
Type (68)
    on left: 12 13 14 15 16 17, on right: 9 17 18 20 89
FnDecl (69)
    on left: 18 19, on right: 5 27
Prototype (70)
    on left: 20 21, on right: 22
PrototypeList (71)
    on left: 22 23, on right: 22 36
Formals (72)
    on left: 24 25, on right: 18 19 20 21
Field (73)
    on left: 26 27, on right: 28
FieldList (74)
    on left: 28 29, on right: 28 32 33 34 35
IdentList (75)
    on left: 30 31, on right: 30 34 35
ClassDecl (76)
    on left: 32 33 34 35, on right: 6
InterfaceDecl (77)
    on left: 36, on right: 7
VarDeclList (78)
    on left: 37 38, on right: 37 41 42
StmtList (79)
    on left: 39 40, on right: 39 41 43
StmtBlock (80)
    on left: 41 42 43 44, on right: 18 19 54
ExprCont (81)
    on left: 45 46, on right: 47 59 60
Stmt (82)
    on left: 47 48 49 50 51 52 53 54, on right: 39 40 55 57 58 59
Else (83)
    on left: 55 56, on right: 57
IfStmt (84)
    on left: 57, on right: 48
WhileStmt (85)
    on left: 58, on right: 49
ForStmt (86)
    on left: 59, on right: 50
ReturnStmt (87)
    on left: 60, on right: 52
BreakStmt (88)
    on left: 61, on right: 51
ExprList (89)
    on left: 62 63, on right: 62 64 95
PrintStmt (90)
    on left: 64, on right: 53
Expr (91)
    on left: 65 66 67 68 69 70 71 72 73 74 75 76 77 78 79 80 81 82
    83 84 85 86 87 88 89, on right: 45 57 58 59 62 63 69 70 71 72 73
    74 75 76 77 78 79 80 81 82 83 84 85 89 91 92 94
Lvalue (92)
    on left: 90 91 92, on right: 65 70
Call (93)
    on left: 93 94, on right: 68
Actuals (94)
    on left: 95 96, on right: 93 94
Constant (95)
    on left: 97 98 99 100 101, on right: 66


state 0

    0 $accept: . Program $end

    T_Void        shift, and go to state 1
    T_Bool        shift, and go to state 2
    T_Int         shift, and go to state 3
    T_Double      shift, and go to state 4
    T_String      shift, and go to state 5
    T_Class       shift, and go to state 6
    T_Interface   shift, and go to state 7
    T_Identifier  shift, and go to state 8

    Program        go to state 9
    DeclList       go to state 10
    Decl           go to state 11
    VarDecl        go to state 12
    Var            go to state 13
    Type           go to state 14
    FnDecl         go to state 15
    ClassDecl      go to state 16
    InterfaceDecl  go to state 17


state 1

   19 FnDecl: T_Void . T_Identifier '(' Formals ')' StmtBlock

    T_Identifier  shift, and go to state 18


state 2

   14 Type: T_Bool .

    $default  reduce using rule 14 (Type)


state 3

   12 Type: T_Int .

    $default  reduce using rule 12 (Type)


state 4

   13 Type: T_Double .

    $default  reduce using rule 13 (Type)


state 5

   15 Type: T_String .

    $default  reduce using rule 15 (Type)


state 6

   32 ClassDecl: T_Class . T_Identifier '{' FieldList '}'
   33          | T_Class . T_Identifier T_Extends T_Identifier '{' FieldList '}'
   34          | T_Class . T_Identifier T_Implements IdentList '{' FieldList '}'
   35          | T_Class . T_Identifier T_Extends T_Identifier T_Implements IdentList '{' FieldList '}'

    T_Identifier  shift, and go to state 19


state 7

   36 InterfaceDecl: T_Interface . T_Identifier '{' PrototypeList '}'

    T_Identifier  shift, and go to state 20


state 8

   16 Type: T_Identifier .

    $default  reduce using rule 16 (Type)


state 9

    0 $accept: Program . $end

    $end  shift, and go to state 21


state 10

    1 Program: DeclList .
    2 DeclList: DeclList . Decl

    T_Void        shift, and go to state 1
    T_Bool        shift, and go to state 2
    T_Int         shift, and go to state 3
    T_Double      shift, and go to state 4
    T_String      shift, and go to state 5
    T_Class       shift, and go to state 6
    T_Interface   shift, and go to state 7
    T_Identifier  shift, and go to state 8

    $default  reduce using rule 1 (Program)

    Decl           go to state 22
    VarDecl        go to state 12
    Var            go to state 13
    Type           go to state 14
    FnDecl         go to state 15
    ClassDecl      go to state 16
    InterfaceDecl  go to state 17


state 11

    3 DeclList: Decl .

    $default  reduce using rule 3 (DeclList)


state 12

    4 Decl: VarDecl .

    $default  reduce using rule 4 (Decl)


state 13

    8 VarDecl: Var . ';'

    ';'  shift, and go to state 23


state 14

    9 Var: Type . T_Identifier
   17 Type: Type . T_Dims
   18 FnDecl: Type . T_Identifier '(' Formals ')' StmtBlock

    T_Dims        shift, and go to state 24
    T_Identifier  shift, and go to state 25


state 15

    5 Decl: FnDecl .

    $default  reduce using rule 5 (Decl)


state 16

    6 Decl: ClassDecl .

    $default  reduce using rule 6 (Decl)


state 17

    7 Decl: InterfaceDecl .

    $default  reduce using rule 7 (Decl)


state 18

   19 FnDecl: T_Void T_Identifier . '(' Formals ')' StmtBlock

    '('  shift, and go to state 26


state 19

   32 ClassDecl: T_Class T_Identifier . '{' FieldList '}'
   33          | T_Class T_Identifier . T_Extends T_Identifier '{' FieldList '}'
   34          | T_Class T_Identifier . T_Implements IdentList '{' FieldList '}'
   35          | T_Class T_Identifier . T_Extends T_Identifier T_Implements IdentList '{' FieldList '}'

    T_Extends     shift, and go to state 27
    T_Implements  shift, and go to state 28
    '{'           shift, and go to state 29


state 20

   36 InterfaceDecl: T_Interface T_Identifier . '{' PrototypeList '}'

    '{'  shift, and go to state 30


state 21

    0 $accept: Program $end .

    $default  accept


state 22

    2 DeclList: DeclList Decl .

    $default  reduce using rule 2 (DeclList)


state 23

    8 VarDecl: Var ';' .

    $default  reduce using rule 8 (VarDecl)


state 24

   17 Type: Type T_Dims .

    $default  reduce using rule 17 (Type)


state 25

    9 Var: Type T_Identifier .
   18 FnDecl: Type T_Identifier . '(' Formals ')' StmtBlock

    '('  shift, and go to state 31

    $default  reduce using rule 9 (Var)


state 26

   19 FnDecl: T_Void T_Identifier '(' . Formals ')' StmtBlock

    T_Bool        shift, and go to state 2
    T_Int         shift, and go to state 3
    T_Double      shift, and go to state 4
    T_String      shift, and go to state 5
    T_Identifier  shift, and go to state 8

    $default  reduce using rule 25 (Formals)

    Var      go to state 32
    VarList  go to state 33
    Type     go to state 34
    Formals  go to state 35


state 27

   33 ClassDecl: T_Class T_Identifier T_Extends . T_Identifier '{' FieldList '}'
   35          | T_Class T_Identifier T_Extends . T_Identifier T_Implements IdentList '{' FieldList '}'

    T_Identifier  shift, and go to state 36


state 28

   34 ClassDecl: T_Class T_Identifier T_Implements . IdentList '{' FieldList '}'

    T_Identifier  shift, and go to state 37

    IdentList  go to state 38


state 29

   32 ClassDecl: T_Class T_Identifier '{' . FieldList '}'

    $default  reduce using rule 29 (FieldList)

    FieldList  go to state 39


state 30

   36 InterfaceDecl: T_Interface T_Identifier '{' . PrototypeList '}'

    $default  reduce using rule 23 (PrototypeList)

    PrototypeList  go to state 40


state 31

   18 FnDecl: Type T_Identifier '(' . Formals ')' StmtBlock

    T_Bool        shift, and go to state 2
    T_Int         shift, and go to state 3
    T_Double      shift, and go to state 4
    T_String      shift, and go to state 5
    T_Identifier  shift, and go to state 8

    $default  reduce using rule 25 (Formals)

    Var      go to state 32
    VarList  go to state 33
    Type     go to state 34
    Formals  go to state 41


state 32

   11 VarList: Var .

    $default  reduce using rule 11 (VarList)


state 33

   10 VarList: VarList . ',' Var
   24 Formals: VarList .

    ','  shift, and go to state 42

    $default  reduce using rule 24 (Formals)


state 34

    9 Var: Type . T_Identifier
   17 Type: Type . T_Dims

    T_Dims        shift, and go to state 24
    T_Identifier  shift, and go to state 43


state 35

   19 FnDecl: T_Void T_Identifier '(' Formals . ')' StmtBlock

    ')'  shift, and go to state 44


state 36

   33 ClassDecl: T_Class T_Identifier T_Extends T_Identifier . '{' FieldList '}'
   35          | T_Class T_Identifier T_Extends T_Identifier . T_Implements IdentList '{' FieldList '}'

    T_Implements  shift, and go to state 45
    '{'           shift, and go to state 46


state 37

   31 IdentList: T_Identifier .

    $default  reduce using rule 31 (IdentList)


state 38

   30 IdentList: IdentList . ',' T_Identifier
   34 ClassDecl: T_Class T_Identifier T_Implements IdentList . '{' FieldList '}'

    ','  shift, and go to state 47
    '{'  shift, and go to state 48


state 39

   28 FieldList: FieldList . Field
   32 ClassDecl: T_Class T_Identifier '{' FieldList . '}'

    T_Void        shift, and go to state 1
    T_Bool        shift, and go to state 2
    T_Int         shift, and go to state 3
    T_Double      shift, and go to state 4
    T_String      shift, and go to state 5
    T_Identifier  shift, and go to state 8
    '}'           shift, and go to state 49

    VarDecl  go to state 50
    Var      go to state 13
    Type     go to state 14
    FnDecl   go to state 51
    Field    go to state 52


state 40

   22 PrototypeList: PrototypeList . Prototype
   36 InterfaceDecl: T_Interface T_Identifier '{' PrototypeList . '}'

    T_Void        shift, and go to state 53
    T_Bool        shift, and go to state 2
    T_Int         shift, and go to state 3
    T_Double      shift, and go to state 4
    T_String      shift, and go to state 5
    T_Identifier  shift, and go to state 8
    '}'           shift, and go to state 54

    Type       go to state 55
    Prototype  go to state 56


state 41

   18 FnDecl: Type T_Identifier '(' Formals . ')' StmtBlock

    ')'  shift, and go to state 57


state 42

   10 VarList: VarList ',' . Var

    T_Bool        shift, and go to state 2
    T_Int         shift, and go to state 3
    T_Double      shift, and go to state 4
    T_String      shift, and go to state 5
    T_Identifier  shift, and go to state 8

    Var   go to state 58
    Type  go to state 34


state 43

    9 Var: Type T_Identifier .

    $default  reduce using rule 9 (Var)


state 44

   19 FnDecl: T_Void T_Identifier '(' Formals ')' . StmtBlock

    '{'  shift, and go to state 59

    StmtBlock  go to state 60


state 45

   35 ClassDecl: T_Class T_Identifier T_Extends T_Identifier T_Implements . IdentList '{' FieldList '}'

    T_Identifier  shift, and go to state 37

    IdentList  go to state 61


state 46

   33 ClassDecl: T_Class T_Identifier T_Extends T_Identifier '{' . FieldList '}'

    $default  reduce using rule 29 (FieldList)

    FieldList  go to state 62


state 47

   30 IdentList: IdentList ',' . T_Identifier

    T_Identifier  shift, and go to state 63


state 48

   34 ClassDecl: T_Class T_Identifier T_Implements IdentList '{' . FieldList '}'

    $default  reduce using rule 29 (FieldList)

    FieldList  go to state 64


state 49

   32 ClassDecl: T_Class T_Identifier '{' FieldList '}' .

    $default  reduce using rule 32 (ClassDecl)


state 50

   26 Field: VarDecl .

    $default  reduce using rule 26 (Field)


state 51

   27 Field: FnDecl .

    $default  reduce using rule 27 (Field)


state 52

   28 FieldList: FieldList Field .

    $default  reduce using rule 28 (FieldList)


state 53

   21 Prototype: T_Void . T_Identifier '(' Formals ')' ';'

    T_Identifier  shift, and go to state 65


state 54

   36 InterfaceDecl: T_Interface T_Identifier '{' PrototypeList '}' .

    $default  reduce using rule 36 (InterfaceDecl)


state 55

   17 Type: Type . T_Dims
   20 Prototype: Type . T_Identifier '(' Formals ')' ';'

    T_Dims        shift, and go to state 24
    T_Identifier  shift, and go to state 66


state 56

   22 PrototypeList: PrototypeList Prototype .

    $default  reduce using rule 22 (PrototypeList)


state 57

   18 FnDecl: Type T_Identifier '(' Formals ')' . StmtBlock

    '{'  shift, and go to state 59

    StmtBlock  go to state 67


state 58

   10 VarList: VarList ',' Var .

    $default  reduce using rule 10 (VarList)


state 59

   41 StmtBlock: '{' . VarDeclList StmtList '}'
   42          | '{' . VarDeclList '}'
   43          | '{' . StmtList '}'
   44          | '{' . '}'

    T_Bool            shift, and go to state 2
    T_Int             shift, and go to state 3
    T_Double          shift, and go to state 4
    T_String          shift, and go to state 5
    T_Null            shift, and go to state 68
    T_This            shift, and go to state 69
    T_While           shift, and go to state 70
    T_For             shift, and go to state 71
    T_If              shift, and go to state 72
    T_Return          shift, and go to state 73
    T_Break           shift, and go to state 74
    T_New             shift, and go to state 75
    T_NewArray        shift, and go to state 76
    T_Print           shift, and go to state 77
    T_ReadInteger     shift, and go to state 78
    T_ReadLine        shift, and go to state 79
    T_Identifier      shift, and go to state 80
    T_StringConstant  shift, and go to state 81
    T_IntConstant     shift, and go to state 82
    T_DoubleConstant  shift, and go to state 83
    T_BoolConstant    shift, and go to state 84
    '-'               shift, and go to state 85
    '!'               shift, and go to state 86
    '('               shift, and go to state 87
    '{'               shift, and go to state 59
    '}'               shift, and go to state 88

    $default  reduce using rule 46 (ExprCont)

    VarDecl      go to state 89
    Var          go to state 13
    Type         go to state 34
    VarDeclList  go to state 90
    StmtList     go to state 91
    StmtBlock    go to state 92
    ExprCont     go to state 93
    Stmt         go to state 94
    IfStmt       go to state 95
    WhileStmt    go to state 96
    ForStmt      go to state 97
    ReturnStmt   go to state 98
    BreakStmt    go to state 99
    PrintStmt    go to state 100
    Expr         go to state 101
    Lvalue       go to state 102
    Call         go to state 103
    Constant     go to state 104


state 60

   19 FnDecl: T_Void T_Identifier '(' Formals ')' StmtBlock .

    $default  reduce using rule 19 (FnDecl)


state 61

   30 IdentList: IdentList . ',' T_Identifier
   35 ClassDecl: T_Class T_Identifier T_Extends T_Identifier T_Implements IdentList . '{' FieldList '}'

    ','  shift, and go to state 47
    '{'  shift, and go to state 105


state 62

   28 FieldList: FieldList . Field
   33 ClassDecl: T_Class T_Identifier T_Extends T_Identifier '{' FieldList . '}'

    T_Void        shift, and go to state 1
    T_Bool        shift, and go to state 2
    T_Int         shift, and go to state 3
    T_Double      shift, and go to state 4
    T_String      shift, and go to state 5
    T_Identifier  shift, and go to state 8
    '}'           shift, and go to state 106

    VarDecl  go to state 50
    Var      go to state 13
    Type     go to state 14
    FnDecl   go to state 51
    Field    go to state 52


state 63

   30 IdentList: IdentList ',' T_Identifier .

    $default  reduce using rule 30 (IdentList)


state 64

   28 FieldList: FieldList . Field
   34 ClassDecl: T_Class T_Identifier T_Implements IdentList '{' FieldList . '}'

    T_Void        shift, and go to state 1
    T_Bool        shift, and go to state 2
    T_Int         shift, and go to state 3
    T_Double      shift, and go to state 4
    T_String      shift, and go to state 5
    T_Identifier  shift, and go to state 8
    '}'           shift, and go to state 107

    VarDecl  go to state 50
    Var      go to state 13
    Type     go to state 14
    FnDecl   go to state 51
    Field    go to state 52


state 65

   21 Prototype: T_Void T_Identifier . '(' Formals ')' ';'

    '('  shift, and go to state 108


state 66

   20 Prototype: Type T_Identifier . '(' Formals ')' ';'

    '('  shift, and go to state 109


state 67

   18 FnDecl: Type T_Identifier '(' Formals ')' StmtBlock .

    $default  reduce using rule 18 (FnDecl)


state 68

  101 Constant: T_Null .

    $default  reduce using rule 101 (Constant)


state 69

   67 Expr: T_This .

    $default  reduce using rule 67 (Expr)


state 70

   58 WhileStmt: T_While . '(' Expr ')' Stmt

    '('  shift, and go to state 110


state 71

   59 ForStmt: T_For . '(' ExprCont ';' Expr ';' ExprCont ')' Stmt

    '('  shift, and go to state 111


state 72

   57 IfStmt: T_If . '(' Expr ')' Stmt Else

    '('  shift, and go to state 112


state 73

   60 ReturnStmt: T_Return . ExprCont ';'

    T_Null            shift, and go to state 68
    T_This            shift, and go to state 69
    T_New             shift, and go to state 75
    T_NewArray        shift, and go to state 76
    T_ReadInteger     shift, and go to state 78
    T_ReadLine        shift, and go to state 79
    T_Identifier      shift, and go to state 113
    T_StringConstant  shift, and go to state 81
    T_IntConstant     shift, and go to state 82
    T_DoubleConstant  shift, and go to state 83
    T_BoolConstant    shift, and go to state 84
    '-'               shift, and go to state 85
    '!'               shift, and go to state 86
    '('               shift, and go to state 87

    $default  reduce using rule 46 (ExprCont)

    ExprCont  go to state 114
    Expr      go to state 101
    Lvalue    go to state 102
    Call      go to state 103
    Constant  go to state 104


state 74

   61 BreakStmt: T_Break . ';'

    ';'  shift, and go to state 115


state 75

   88 Expr: T_New . '(' T_Identifier ')'

    '('  shift, and go to state 116


state 76

   89 Expr: T_NewArray . '(' Expr ',' Type ')'

    '('  shift, and go to state 117


state 77

   64 PrintStmt: T_Print . '(' ExprList ')' ';'

    '('  shift, and go to state 118


state 78

   86 Expr: T_ReadInteger . '(' ')'

    '('  shift, and go to state 119


state 79

   87 Expr: T_ReadLine . '(' ')'

    '('  shift, and go to state 120


state 80

   16 Type: T_Identifier .
   90 Lvalue: T_Identifier .
   93 Call: T_Identifier . '(' Actuals ')'

    '('  shift, and go to state 121

    T_Dims        reduce using rule 16 (Type)
    T_Identifier  reduce using rule 16 (Type)
    $default      reduce using rule 90 (Lvalue)


state 81

  100 Constant: T_StringConstant .

    $default  reduce using rule 100 (Constant)


state 82

   97 Constant: T_IntConstant .

    $default  reduce using rule 97 (Constant)


state 83

   98 Constant: T_DoubleConstant .

    $default  reduce using rule 98 (Constant)


state 84

   99 Constant: T_BoolConstant .

    $default  reduce using rule 99 (Constant)


state 85

   76 Expr: '-' . Expr

    T_Null            shift, and go to state 68
    T_This            shift, and go to state 69
    T_New             shift, and go to state 75
    T_NewArray        shift, and go to state 76
    T_ReadInteger     shift, and go to state 78
    T_ReadLine        shift, and go to state 79
    T_Identifier      shift, and go to state 113
    T_StringConstant  shift, and go to state 81
    T_IntConstant     shift, and go to state 82
    T_DoubleConstant  shift, and go to state 83
    T_BoolConstant    shift, and go to state 84
    '-'               shift, and go to state 85
    '!'               shift, and go to state 86
    '('               shift, and go to state 87

    Expr      go to state 122
    Lvalue    go to state 102
    Call      go to state 103
    Constant  go to state 104


state 86

   85 Expr: '!' . Expr

    T_Null            shift, and go to state 68
    T_This            shift, and go to state 69
    T_New             shift, and go to state 75
    T_NewArray        shift, and go to state 76
    T_ReadInteger     shift, and go to state 78
    T_ReadLine        shift, and go to state 79
    T_Identifier      shift, and go to state 113
    T_StringConstant  shift, and go to state 81
    T_IntConstant     shift, and go to state 82
    T_DoubleConstant  shift, and go to state 83
    T_BoolConstant    shift, and go to state 84
    '-'               shift, and go to state 85
    '!'               shift, and go to state 86
    '('               shift, and go to state 87

    Expr      go to state 123
    Lvalue    go to state 102
    Call      go to state 103
    Constant  go to state 104


state 87

   69 Expr: '(' . Expr ')'

    T_Null            shift, and go to state 68
    T_This            shift, and go to state 69
    T_New             shift, and go to state 75
    T_NewArray        shift, and go to state 76
    T_ReadInteger     shift, and go to state 78
    T_ReadLine        shift, and go to state 79
    T_Identifier      shift, and go to state 113
    T_StringConstant  shift, and go to state 81
    T_IntConstant     shift, and go to state 82
    T_DoubleConstant  shift, and go to state 83
    T_BoolConstant    shift, and go to state 84
    '-'               shift, and go to state 85
    '!'               shift, and go to state 86
    '('               shift, and go to state 87

    Expr      go to state 124
    Lvalue    go to state 102
    Call      go to state 103
    Constant  go to state 104


state 88

   44 StmtBlock: '{' '}' .

    $default  reduce using rule 44 (StmtBlock)


state 89

   38 VarDeclList: VarDecl .

    $default  reduce using rule 38 (VarDeclList)


state 90

   37 VarDeclList: VarDeclList . VarDecl
   41 StmtBlock: '{' VarDeclList . StmtList '}'
   42          | '{' VarDeclList . '}'

    T_Bool            shift, and go to state 2
    T_Int             shift, and go to state 3
    T_Double          shift, and go to state 4
    T_String          shift, and go to state 5
    T_Null            shift, and go to state 68
    T_This            shift, and go to state 69
    T_While           shift, and go to state 70
    T_For             shift, and go to state 71
    T_If              shift, and go to state 72
    T_Return          shift, and go to state 73
    T_Break           shift, and go to state 74
    T_New             shift, and go to state 75
    T_NewArray        shift, and go to state 76
    T_Print           shift, and go to state 77
    T_ReadInteger     shift, and go to state 78
    T_ReadLine        shift, and go to state 79
    T_Identifier      shift, and go to state 80
    T_StringConstant  shift, and go to state 81
    T_IntConstant     shift, and go to state 82
    T_DoubleConstant  shift, and go to state 83
    T_BoolConstant    shift, and go to state 84
    '-'               shift, and go to state 85
    '!'               shift, and go to state 86
    '('               shift, and go to state 87
    '{'               shift, and go to state 59
    '}'               shift, and go to state 125

    $default  reduce using rule 46 (ExprCont)

    VarDecl     go to state 126
    Var         go to state 13
    Type        go to state 34
    StmtList    go to state 127
    StmtBlock   go to state 92
    ExprCont    go to state 93
    Stmt        go to state 94
    IfStmt      go to state 95
    WhileStmt   go to state 96
    ForStmt     go to state 97
    ReturnStmt  go to state 98
    BreakStmt   go to state 99
    PrintStmt   go to state 100
    Expr        go to state 101
    Lvalue      go to state 102
    Call        go to state 103
    Constant    go to state 104


state 91

   39 StmtList: StmtList . Stmt
   43 StmtBlock: '{' StmtList . '}'

    T_Null            shift, and go to state 68
    T_This            shift, and go to state 69
    T_While           shift, and go to state 70
    T_For             shift, and go to state 71
    T_If              shift, and go to state 72
    T_Return          shift, and go to state 73
    T_Break           shift, and go to state 74
    T_New             shift, and go to state 75
    T_NewArray        shift, and go to state 76
    T_Print           shift, and go to state 77
    T_ReadInteger     shift, and go to state 78
    T_ReadLine        shift, and go to state 79
    T_Identifier      shift, and go to state 113
    T_StringConstant  shift, and go to state 81
    T_IntConstant     shift, and go to state 82
    T_DoubleConstant  shift, and go to state 83
    T_BoolConstant    shift, and go to state 84
    '-'               shift, and go to state 85
    '!'               shift, and go to state 86
    '('               shift, and go to state 87
    '{'               shift, and go to state 59
    '}'               shift, and go to state 128

    $default  reduce using rule 46 (ExprCont)

    StmtBlock   go to state 92
    ExprCont    go to state 93
    Stmt        go to state 129
    IfStmt      go to state 95
    WhileStmt   go to state 96
    ForStmt     go to state 97
    ReturnStmt  go to state 98
    BreakStmt   go to state 99
    PrintStmt   go to state 100
    Expr        go to state 101
    Lvalue      go to state 102
    Call        go to state 103
    Constant    go to state 104


state 92

   54 Stmt: StmtBlock .

    $default  reduce using rule 54 (Stmt)


state 93

   47 Stmt: ExprCont . ';'

    ';'  shift, and go to state 130


state 94

   40 StmtList: Stmt .

    $default  reduce using rule 40 (StmtList)


state 95

   48 Stmt: IfStmt .

    $default  reduce using rule 48 (Stmt)


state 96

   49 Stmt: WhileStmt .

    $default  reduce using rule 49 (Stmt)


state 97

   50 Stmt: ForStmt .

    $default  reduce using rule 50 (Stmt)


state 98

   52 Stmt: ReturnStmt .

    $default  reduce using rule 52 (Stmt)


state 99

   51 Stmt: BreakStmt .

    $default  reduce using rule 51 (Stmt)


state 100

   53 Stmt: PrintStmt .

    $default  reduce using rule 53 (Stmt)


state 101

   45 ExprCont: Expr .
   71 Expr: Expr . '+' Expr
   72     | Expr . '-' Expr
   73     | Expr . '*' Expr
   74     | Expr . '/' Expr
   75     | Expr . '%' Expr
   77     | Expr . '<' Expr
   78     | Expr . T_LessEqual Expr
   79     | Expr . '>' Expr
   80     | Expr . T_GreaterEqual Expr
   81     | Expr . T_Equal Expr
   82     | Expr . T_NotEqual Expr
   83     | Expr . T_And Expr
   84     | Expr . T_Or Expr
   91 Lvalue: Expr . '.' T_Identifier
   92       | Expr . '[' Expr ']'
   94 Call: Expr . '.' T_Identifier '(' Actuals ')'

    T_LessEqual     shift, and go to state 131
    T_GreaterEqual  shift, and go to state 132
    T_Equal         shift, and go to state 133
    T_NotEqual      shift, and go to state 134
    T_And           shift, and go to state 135
    T_Or            shift, and go to state 136
    '<'             shift, and go to state 137
    '>'             shift, and go to state 138
    '+'             shift, and go to state 139
    '-'             shift, and go to state 140
    '*'             shift, and go to state 141
    '/'             shift, and go to state 142
    '%'             shift, and go to state 143
    '.'             shift, and go to state 144
    '['             shift, and go to state 145

    $default  reduce using rule 45 (ExprCont)


state 102

   65 Expr: Lvalue .
   70     | Lvalue . '=' Expr

    '='  shift, and go to state 146

    $default  reduce using rule 65 (Expr)


state 103

   68 Expr: Call .

    $default  reduce using rule 68 (Expr)


state 104

   66 Expr: Constant .

    $default  reduce using rule 66 (Expr)


state 105

   35 ClassDecl: T_Class T_Identifier T_Extends T_Identifier T_Implements IdentList '{' . FieldList '}'

    $default  reduce using rule 29 (FieldList)

    FieldList  go to state 147


state 106

   33 ClassDecl: T_Class T_Identifier T_Extends T_Identifier '{' FieldList '}' .

    $default  reduce using rule 33 (ClassDecl)


state 107

   34 ClassDecl: T_Class T_Identifier T_Implements IdentList '{' FieldList '}' .

    $default  reduce using rule 34 (ClassDecl)


state 108

   21 Prototype: T_Void T_Identifier '(' . Formals ')' ';'

    T_Bool        shift, and go to state 2
    T_Int         shift, and go to state 3
    T_Double      shift, and go to state 4
    T_String      shift, and go to state 5
    T_Identifier  shift, and go to state 8

    $default  reduce using rule 25 (Formals)

    Var      go to state 32
    VarList  go to state 33
    Type     go to state 34
    Formals  go to state 148


state 109

   20 Prototype: Type T_Identifier '(' . Formals ')' ';'

    T_Bool        shift, and go to state 2
    T_Int         shift, and go to state 3
    T_Double      shift, and go to state 4
    T_String      shift, and go to state 5
    T_Identifier  shift, and go to state 8

    $default  reduce using rule 25 (Formals)

    Var      go to state 32
    VarList  go to state 33
    Type     go to state 34
    Formals  go to state 149


state 110

   58 WhileStmt: T_While '(' . Expr ')' Stmt
